--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         with a degree in Health Sciences. In my spare time I like to read, play videogames, play guitar, and hike. I'm an animal person with a preference to cats.
         Some of my favourite musicians/bands are: Frank Sinatra, Daft Punk, Nirvana, Radiohead, Nujabes etc. My celebrity lookalike is Ryan Reynolds.
     </p>
-    <img src="Images/Deadpool_2_Japan_Premiere_Red_Carpet_Ryan_Reynolds_(cropped).jpg" alt="Celebrity lookalike Ryan Reynolds" width="225" height="300" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="Images/Deadpool_2_Japan_Premiere_Red_Carpet_Ryan_Reynolds_(cropped).jpg" alt="Celebrity lookalike Ryan Reynolds" width="225" height="300">
     <img src="Images/imagetools1.jpg" alt="My face" width="225" height="300" p style="clear: both;">
 
     
