--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Some of my favourite musicians/bands are: Frank Sinatra, Daft Punk, Nirvana, Radiohead, Nujabes etc. My celebrity lookalike is Ryan Reynolds.
     </p>
     <img src="Images/Deadpool_2_Japan_Premiere_Red_Carpet_Ryan_Reynolds_(cropped).jpg" alt="Celebrity lookalike Ryan Reynolds" width="225" height="300">
-    <img src="Images/imagetools1.jpg" alt="My face" width="225" height="300" p style="clear: both;">
+    <img src="Images/imagetools1.jpg" alt="My face" width="225" height="300">
 
     
     <h2>Courses I'm Taking</h2>
